{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 28,
  "lineage": "3dad40a2-0a75-7a34-b84e-be564dd40a55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:680232662269:instance/i-002098968f373b2a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-002098968f373b2a5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_account_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f377e9f73bacf34",
            "private_dns": "ip-172-31-62-188.ec2.internal",
            "private_ip": "172.31.62.188",
            "public_dns": "ec2-34-224-3-92.compute-1.amazonaws.com",
            "public_ip": "34.224.3.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0142ca6b606cc23cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-example-instance",
              "terraform-ssh-instance"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e1fdd14a3112cd4",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-example"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04e92937bf6d3417c",
              "sg-0a57b994ed4c00ef0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.test_profile",
            "aws_security_group.instance",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680232662269:security-group/sg-0a57b994ed4c00ef0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a57b994ed4c00ef0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": "",
            "owner_id": "680232662269",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f50b74121a9079f9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680232662269:security-group/sg-04e92937bf6d3417c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e92937bf6d3417c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-ssh-instance",
            "name_prefix": "",
            "owner_id": "680232662269",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f50b74121a9079f9"
          }
        }
      ]
    }
  ]
}